# scalarhackathon

./: .gitignore  BLOG_POST.md  DEVPOST_PITCH_STRATEGY.md  Dockerfile  README.md  RESEARCH_PAPER.md  app.py  baseline.py  compare_models.py  demo_comparison.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  project_details.md  pyproject.toml  requirements-rl.txt  requirements.txt  results_log.txt  rubrics.py  scaler_enterprise_metrics_v5.ipynb  sovereign_train_v10.ipynb  sovereign_train_v11.ipynb  sovereign_train_v5.ipynb  test_env_out.txt  test_env_out_utf8.txt  test_format.py  test_output.txt  test_results.txt  test_suite.py  train.py  train_frontier.py  train_frontier_v5.py  train_max.py  train_rl.ipynb  train_sota.py  validator.py  validator_fix.py  verify_final.py  (+3 more)
data/: gen_dataset.py  gen_sota.py  inboxes.json
server/: app.py  ui_assets.py  ui_builder.py
tests/: test_env.py
