[project]
name = "email-triage-env"
version = "1.0.0"
description = "Real-world email support triage benchmark for AI agents (OpenEnv)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.51.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "gradio>=4.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
